fix overflow

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body,
@@ -15,34 +15,30 @@ figure,
 blockquote,
 dl,
 dd {
-    margin: 0;
+	margin: 0;
 }
 
 body {
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 button,
 input {
-    font: inherit;
+	font: inherit;
 }
 
 a,
 input {
-    color: inherit;
-    text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-}
-
-body {
-    min-height: 100vh;
+	display: block;
+	max-width: 100%;
 }
 
 ul {
-    padding: 0;
-    list-style: none;
+	padding: 0;
+	list-style: none;
 }
